# agentic-guardrails-eval

./: .cursorrules  .env.template  .gitignore  README.md  TASKS.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/agents/: build-asr-eval.md  build-colang-flows.md  build-red-team.md  build-report-gen.md
.github/workflows/: ci.yml
api/: main.py
configs/: rails.yaml
deploy/: Dockerfile  docker-compose.yml
detectors/: hallucination_detector.py  injection_detector.py  pii_detector.py
docs/: architecture.md
evals/: eval_runner.py  report_gen.py  safety_eval.py
guardrails/: actions.py
guardrails/colang/: hallucination.co  injection.co  jailbreak.co  pii_protection.co
guardrails/config/: config.yml  prompts.yml
red_team/: red_team_agent.py
red_team/attack_library/: injection_attacks.json  jailbreak_attacks.json  pii_attacks.json
tests/: conftest.py  test_actions.py  test_api.py  test_colang_flows.py  test_detectors.py  test_red_team.py  test_report_gen.py  test_safety_eval.py
